--- a/01_menu_sidebar/style.css
+++ b/01_menu_sidebar/style.css
@@ -7,8 +7,8 @@
 }
 body {
 	display: flex;
-	justify-content: center;
-	align-content: center;
+	/*justify-content: center;
+	align-content: center;*/
 	min-height: 100vh;
 	background: #232c33;
 }
