--- a/01_html_form/login_form/style.css
+++ b/01_html_form/login_form/style.css
@@ -5,7 +5,7 @@ body {
 
 .signup-box {
 	width: 360px;
-	height: 620px;
+	height: 600px;
 	margin: auto;
 	background-color: white;
 	border-radius: 3px;
@@ -59,7 +59,7 @@ p {
 	text-align: center;
 	color: white;
 	font-size: 15px;
-	margin-top: -10px;
+	/*margin-top: 5px;*/
 }
 .para-2 a {
 	color: #49c1a2;
